# Generative-Resume-and-Cover-Letter-Assistant

./: .gitignore  PRESENTATION_SLIDES.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
backend/: api.py  app.py  config.py  orchestrator.py  requirements.txt
backend/agents/: __init__.py  editor_llm.py  generator_llm.py  jd_classifier_llm.py  jd_parser_rules.py
backend/core/: __init__.py  chunking.py  evidence.py  export.py  normalize.py  pdf_extract.py  preprocess.py  ranker.py  retrieval_bm25.py  retrieval_embed.py  retrieval_tfidf.py  skill_taxonomy.py  validators.py
backend/data/: fewshot_examples.json  skills.yaml  stopwords.txt
backend/prompts/: edit_style.json.txt  generate_resume.json.txt  jd_classify.txt
backend/schemas/: final_output.schema.json  generation.schema.json  jd_struct.schema.json  match_report.schema.json
frontend1/: package-lock.json  package.json
frontend1/src/app/: layout.tsx  page.tsx
frontend1/src/components/: evidence-panel.tsx  generation-results.tsx  match-summary.tsx  request-form.tsx
frontend1/src/components/ui/: card.tsx
frontend1/src/lib/: api.ts
frontend1/src/types/: pipeline.ts
