[project]
name = "cv-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "rank-bm25>=0.2.2",
  "openai>=1.40.0",
  "streamlit>=1.36.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "faiss-cpu>=1.8.0"
]

[tool.uvicorn]
factory = false

[tool.streamlit]
serverPort = 8501
